<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/search_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_card"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="2">

        <CheckBox
            android:id="@+id/cb_search_filter_title"
            style="@style/checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_filter_title"
            android:textColor="@color/text_primary"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <CheckBox
            android:id="@+id/cb_search_filter_content"
            style="@style/checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_filter_content"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <CheckBox
            android:id="@+id/cb_search_filter_location"
            style="@style/checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_filter_location"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <CheckBox
            android:id="@+id/cb_search_filter_date"
            style="@style/checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_filter_date"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <CalendarView
            android:id="@+id/cv_search_filter_time_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_columnSpan="4"
            app:layout_gravity="center_horizontal"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>